Fix title word wrap

--- a/css/master.scss
+++ b/css/master.scss
@@ -297,6 +297,7 @@ nav.upperNav input:hover {
   top: -55%;
   color: white;
   text-align: center;
+  word-break: break-all;
 }
 
 .galleryItemTitle:hover {
